# rust-graphql-todoapi

./: .env  Cargo.toml  todo.db
migrations/2023-12-05-015310_create_todos/: up.sql
src/: lib.rs  main.rs  models.rs
src/graphql/: schema.rs
